<resources>
    <string name="app_name">GOOGLE+ APPLICATION</string>
    <string name="hello_world">GEO.COM!</string>
    <string name="action_settings">Settings</string>
    <string name="mapKey">AIzaSyBs7LDzcCTU1sDJccSM7UF6Bz4RVc8RNek</string>
    <string name="title_activity_connexion">GEO.COM</string>
    <string name="description_logo">Demo</string>
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_map">Carte</string>
    <string name="description_commande">Commande</string>
    <string name="description_logout">Déconnecté</string>
    <string name="description_tiers">Tiers</string>
    <string name="description_stock">Stocks</string>
    <string name="description_sync">Sync</string>
    <string name="description_livreur">Livraison</string>
    <string name="description_state">Statistiques</string>
    <string name="description_intervention">Intervention</string>
    <string name="title_recherche">Recherche....</string>
    <string name="title_about">A propos de nous</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Feature 1</string>
    <string name="title_feature2">Feature 2</string>
    <string name="title_feature3">Feature 3</string>
    <string name="title_feature4">Feature 4</string>
    <string name="title_feature5">Feature 5</string>
    <string name="title_feature6">Feature 6</string>
    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Feature 4 content goes here.</string>
    <string name="feature5_intro">Feature 5 content goes here.</string>
    <string name="feature6_intro">Feature 6 content goes here.</string>
    <string name="about_intro">        "<font size="15"><b><u>Historique</u></b></font>\n\r
		    \n\r2007 : Création de GEO.COM
		    Fin 2009 : Fin de la phase de dévelopement des softs et début de la commercialisation.\n\r
		    2012 : Mises à jours importantes, avec  l\'intégration de différents modèles et marques de balises GPS/GPRS.\n\r
		    2013 : Mises à jours importantes dont l\'intégration de la gestion de mission, les radars fixes Marocains.\n\r
		\n\r<font size="15"><b><u>Equipe</u></b></font> \n\r
		    \n\rEffectif total  : 16 personnes\n\r
		    Directeur Administratif et financier : BERRADA YOUSSEF\n\r
		    Directeur Commercial : BOUZOUBAA ASMAA\n\r
		    Directeur Marketing : BERRADA KENZA\n\r
		    Directeur Technique : MOUNIR BAGHDAD JAMAI\n\r
		    Comerciaux : 4\n\r
		    Ingénieurs : 4\n\r
		    Assistantes de direction : 1\n\r
		    Techniciens : 3\n\r
		\n\r"</string>
    <string name="about_email"><font size="15"><b><u>En savoir plus sur notre site : <a href="http://dolibarrmaroc.com">GEO.COM</a></u></b></font></string>
    <string name="search_intro">Content for the Search page goes here.</string>
    <string name="client_spinner">--Select Client--</string>
    <string name="product_spinner">--Select Produit--</string>
    <string name="msg_add_product">Produit ajouté avec succées !</string>
    <string name="msg_add_invoice">Facture crée avec succées !</string>
    <string name="msg_add_signature">Signature ajouté avec succeés !</string>
    <string name="btn_validete_invoice">Valider Facture</string>
    <string name="btn_validete_order">Valider Commande</string>
    <string name="desig">Désignation</string>
    <string name="product">Produit</string>
    <string name="Commentaire">Commentaire</string>
    <string name="Recu">Reçu</string>
    <string name="cheque">Numéro de chéque</string>
    <string name="reste">Réste à payer</string>
    <string name="total_ttc">Total TTC</string>
    <string name="total_ht">Total HT</string>
    <string name="btn_save">Enregistrer</string>
    <string name="btn_next">Suivant</string>
    <string name="btn_delete">Supprimer</string>
    <string name="btn_validate">Valider</string>
    <string name="btn_cancel">Annuler</string>
    <string name="btn_print">Imprimer</string>
    <string name="btn_decon">Déconnecter</string>
    <string name="msg_retour">Cliquez une autre fois</string>
    <string name="msg_gps_desactive">Le GPS est inactif, voulez-vous l\'activer ?</string>
    <string name="btn_gps_activer">Activer</string>
    <string name="btn_gps_deactiver">Désactiver</string>
    <string name="msg_network">Problème de Réseaux</string>
    <string name="msg_network_alert">SVP vérifié votre connexion</string>
    <string name="msg_device_unsupported">Device non autorisé</string>
    <string name="msg_deviced">Dsl vous n\'avez pas le droit encore pour utiliser cette Application contactez GEO.COM pour l\'activer Num téléphone : +212522400587 / +212522243544 \n\r Email : contact@geocom.ma \n\r Email 2 : contact@marocgeo.ma</string>
    <string name="appel">Appel</string>
    <string name="subject_email">Activation Application GEODROID</string>
    <string name="no_email">Pas d\'application Email installer</string>
    <string name="msg_fields">Tout les champs sont obligatoir !!</string>
    <string name="msg_wait">Attendez SVP...</string>
    <string name="msg_profile_error">Votre profile est : %1$s c\'est pour celà \n\r que vous n\'avez pas le droit de ce connecter !!</string>
    <string name="fatal_error">oops! erreur relié au systéme essayer plus tars !!</string>
    <string name="error">Erreur survenue ressayer plus tard</string>
    <string name="facture_vide">Aucun Produit Dans la Facture</string>
    <string name="qte_vide">Quantité est vide</string>
    <string name="qte_zero">Quantité égale à zéro</string>
    <string name="qte_size">La quantité demandé doit étre superieur à 0</string>
    <string name="facture_action">Action sur Facture</string>
    <string name="facture_num">Facture numero</string>
    <string name="commande_num">Commande numero</string>
    <string name="client_action">Action sur Client</string>
    <string name="facture_choice">Votre choix :</string>
    <string name="stock_limit">Stock Limité</string>
    <string name="stock_msg">Vous avez demandé plus que la quantité que vous avez %1$s \n Veuiller contacter l\'administration pour vous augmenter le stock</string>
    <string name="pdf_required">Lecteur de pdf non installer sur votre device</string>
    <string name="map_data">Récuperation Données</string>
    <string name="facture">Facture</string>
    <string name="facture2">Voir commande</string>
    <string name="client">Client :</string>
    <string name="promotion">Vous Pouvez Consulter nos offres sur le site :</string>
    <string name="le">Le :</string>
    <string name="regles">Montant</string>
    <string name="regle">A REGLER:</string>
    <string name="rested">RESTE:</string>
    <string name="produit_min">Ajouter au moin un produit au Facture ! </string>
    <string name="produit_min2">Ajouter au moin un produit au panier </string>
    <string name="promo_alert">Promotion</string>
    <string name="promo_msg">Vous avez demandé plus que la quantité que vous avez %1$s \n </string>
    <string name="promotion_list">Liste des promotions</string>
    <string name="produit_offert">Produits offerts :</string>
    <string name="promotion_remise">"Reference       remise Valeur"</string>
    <string name="login">Login</string>
    <string name="sign">Crée un nouveau compte</string>
    <string name="password">Password</string>
    <string name="connexion">Connexion</string>
    <string name="title_activity_commercial">GEO.COM</string>
    <string name="title_activity_technicien">GEO.COM</string>
    <string name="title_activity_tracking">GEO.COM</string>
    <string name="action_save">Se souvenir de moi</string>
    <string name="btn_track">Enregistrer</string>
    <string name="btn_step">Step</string>
    <string name="btn_stop">Stop</string>
    <string name="btn_serveur">Url Serveur</string>
    <string name="title_activity_signin">Connexion</string>
    <string name="btn_signin">Enregistrer</string>
    <string name="field_login">Login</string>
    <string name="field_password">Password</string>
    <string name="field_Email">Email</string>
    <string-array name="profile">
        <item>Administrateur</item>
        <item>Commercial</item>
        <item>Technicien</item>
    </string-array>
    <string name="btn_facture">voir Facture</string>
    <string name="btn_produit">Ajouter Produit</string>
    <string name="btn_add_client">ajouter</string>
    <string name="field_qte">Quantité</string>
    <string name="field_pu">Prix unitaire</string>
    <string name="field_total">Total HT</string>
    <string name="field_qntdsp">Pieces disponibles</string>
    <string name="field_mtnttc">Montant Total</string>
    <string name="field_idFac">Numero Facture</string>
    <string name="title_activity_ad">GEO.COM</string>
    <string name="title_activity_client">GEO.COM</string>
    <string name="clt_patente">Patente</string>
    <string name="clt_nom">Nom</string>
    <string name="clt_prenom">Prenom</string>
    <string name="clt_tel">Télephone</string>
    <string name="clt_address">Adresse</string>
    <string name="clt_rc">registre commercial</string>
    <string name="clt_list">List Client</string>
    <string name="clt_btn">Enregistrer</string>
    <string name="clt_facture">Aouter une Facture</string>
    <string name="title_activity_update_client">GEO.COM</string>
    <string name="clt_update">Update</string>
    <string name="title_activity_test">GEO.COM</string>
    <string name="title_activity_facture">GEO.COM</string>
    <string name="color_gris">#FFBCC2BE</string>
    <string name="title_activity_vendeur">Création Facture</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="external_dir">GetSignature</string>
    <string name="title_activity_esignature">GEO.COM</string>
    <string name="title_activity_service">GEO.COM</string>
    <string name="title_activity_gps_tracker">GEO.COM</string>
    <string name="title_activity_network_service">GEO.COM</string>
    <string name="title_activity_next_etape">GEO.COM</string>
    <string name="title_activity_signature">GEO.COM</string>
    <string name="title_activity_groupe_vendeur">GEO.COM</string>
    <string name="title_activity_read_pdf">Lecteur PDF</string>
    <string name="title_activity_admin">Administration</string>
    <string name="title_activity_web_view">Administration</string>
    <string name="comm_address">ADDRESSE</string>
    <string name="comm_zip">CODE</string>
    <string name="comm_tel">TELEPHONE</string>
    <string name="comm_email">EMAIL</string>
    <string name="comm_fax">FAX</string>
    <string name="caus11">Vider vos transactions hors ligne </string>
    <string name="caus12">Vider votre cache hors ligne</string>
    <string name="title_activity_settingsynchro">Configuration hors ligne</string>
    <string name="tecv1">Bordereau d\'intervention</string>
    <string name="tecv2">Clients</string>
    <string name="tecv3">Objets</string>
    <string name="tecv4">Suivant</string>
    <string name="tecv5">Quitter</string>
    <string name="tecv6">--Choisir un Client--</string>
    <string name="syscl1">Chargement des produits et clients</string>
    <string name="syscl2">Chargement des informations des commerciaux</string>
    <string name="syscl3">Chargement des commandes et catalogue produits</string>
    <string name="syscl4">Chargement des factures</string>
    <string name="syscl5">Vider le cache hors ligne</string>
</resources>