<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >
    <LinearLayout
            android:id="@+id/ll1"
            style="@style/TitleBar"
            android:layout_width="match_parent" >

            <ImageButton
                style="@style/TitleBarAction"
                android:contentDescription="@string/description_home"
                android:onClick="onClickHome"
                android:src="@drawable/title_home" />

            <ImageView style="@style/TitleBarSeparator" />

            <TextView style="@style/TitleBarText"
                android:text="@string/title_activity_settingsynchro" />

        </LinearLayout>
<ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="fitCenter"
        android:layout_below="@+id/ll1"
        android:src="@drawable/logo" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:layout_below="@+id/logo">

         <LinearLayout android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <Button
        android:id="@+id/syscbtn1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@drawable/mybuttontop"
        android:text="@string/syscl1" />
        
         <Button
        android:id="@+id/syscbtn2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@drawable/mybuttontop"
        android:text="@string/syscl2" />
         
          <Button
        android:id="@+id/syscbtn3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@drawable/mybuttontop"
        android:text="@string/syscl3" />
          
           <Button
        android:id="@+id/syscbtn4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@drawable/mybuttontop"
        android:text="@string/syscl4" />
           
            <Button
        android:id="@+id/syscbtn5"
        android:layout_width="match_parent"
      android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@drawable/mybuttontop"
        android:text="@string/syscl5" />
         
    </LinearLayout>
    </ScrollView>

   
</RelativeLayout>
