<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

	<LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText" android:text="@string/title_activity_commercial"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layoutall"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="5dp" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <Spinner
                    android:id="@+id/comm_ste"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginBottom="5dp"
                    android:entries="@array/comm_personne" />

                <LinearLayout
                    android:id="@+id/comm_interface"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" >

                    <TextView
                        android:id="@+id/idtxt"
                        android:layout_width="0dp"
                        android:layout_height="0dp" />
                </LinearLayout>

                <Spinner
                    android:id="@+id/comm_type"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:entries="@array/comm_type" />

                <EditText
                    android:id="@+id/comm_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/comm_address"
                    android:inputType="textPostalAddress" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/comm_zip"
                    android:layout_width="126dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/comm_zip"
                    android:inputType="numberSigned" />

                <Spinner
                    android:id="@+id/comm_ville"
                    android:layout_width="match_parent"
                    android:layout_height="54dp" />

                <EditText
                    android:id="@+id/comm_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/comm_tel"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/comm_fax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/comm_fax"
                    android:inputType="phone" />

                <EditText
                    android:id="@+id/comm_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/comm_email"
                    android:inputType="textEmailAddress" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp" >

                    <Button
                        android:id="@+id/comm_etape"
                        android:layout_width="155dp"
                        android:layout_height="50dp"
                        android:layout_margin="5px"
                        android:layout_weight="0.03"
                        android:background="@drawable/mybuttontop"
                        android:padding="10dp"
                        android:text="@string/btn_save"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/comm_suivant"
                        android:layout_width="155dp"
                        android:layout_height="50dp"
                        android:layout_margin="5px"
                        android:layout_weight="0.03"
                        android:background="@drawable/mybuttontop"
                        android:padding="10dp"
                        android:text="@string/btn_next"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</LinearLayout>